fix(property-summary-card): adjust formatting and truncate agent name

--- a/src/scss/components/_property-card.scss
+++ b/src/scss/components/_property-card.scss
@@ -202,7 +202,7 @@
 
   &__phone-agent-name {
     font-family: "Comfortaa", sans-serif;
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 600;
     color: rgba(brand.$dark-navy, 0.8);
     margin-right: auto;
